--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1"
+    "@astrojs/node": "^9.4.4",
+    "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.14.1",
+    "tailwindcss": "^3.4.18"
   }
 }
